--- a/skill-swap-1.0/package.json
+++ b/skill-swap-1.0/package.json
@@ -13,9 +13,14 @@
   "dependencies": {
     "axios": "^1.7.7",
     "firebase": "^11.0.0",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "sweetalert2": "^11.14.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
