--- a/skill-swap-1.0/netlify.toml
+++ b/skill-swap-1.0/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "skill-swap-1.0/"
   command = "npm run build"
-  publish = "skill-swap-1.0/dist"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
